# advanced_aircraft_design_coursework

./: .gitmodules  cost_component.py  mdao_basics.py  pyproject.toml  sellar_example.py  update_submodules.sh  variables.py
examples/: mdao_basics.py
