[tool.uv]
prerelease = "allow"

[project]
name = "aad"
version = "0.1.0"
description = "Advanced Aircraft Design Course Project - SAR mission"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aviary",
  "build_pyoptsparse",
  "pyoptsparse",
  "icecream>=2.1.8",
  "ipdb>=0.13.13",
  "polars>=1.34.0b1",
  "cyipopt>=1.6.1",
  "tabulate>=0.9.0",
  "ruff>=0.14.0",
  "ipywidgets>=8.1.7",
  "swig>=4.3.1.post0",
]

[tool.uv.sources]
aviary = { path = "Aviary" }
build_pyoptsparse = { path = "build_pyoptsparse" }
pyoptsparse = { path = "pyoptsparse" }
